--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "pre-commit": "lint-staged",
   "dependencies": {
+    "@vercel/speed-insights": "^1.2.0",
     "@zeit/react-jsx-parser": "2.0.0",
     "async-sema": "3.1.0",
     "github-slugger": "1.2.1",
