--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "pre-commit": "lint-staged",
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "@zeit/react-jsx-parser": "2.0.0",
     "async-sema": "3.1.0",
@@ -28,6 +29,6 @@
     "lint-staged": "10.5.4",
     "pre-commit": "1.2.2",
     "prettier": "2.2.1",
-    "typescript": "^4.4.4"
+    "typescript": "^5.7.3"
   }
 }
